--- a/client/student copy.html
+++ b/client/student copy.html
@@ -115,97 +115,112 @@
 
   <div class="container mx-auto mt-6 mb-6">
     <div class="flex flex-col md:flex-row justify-between items-center mb-6">
-      <select id="year-filter" class="w-full md:w-48 p-2 border rounded mb-4 md:mb-0" aria-label="Select Year">
-        <option value="">Select Year</option>
-      </select>
-      <select id="degree-filter" class="w-full md:w-48 p-2 border rounded mb-4 md:mb-0" aria-label="Select Degree">
-        <option value="">Select Degree</option>
-      </select>
+      <div class="flex flex-col md:flex-row gap-4 w-full md:w-auto mb-4 md:mb-0">
+        <select id="year-filter" class="w-full md:w-48 p-2 border rounded" aria-label="Select Year">
+          <option value="">All Years</option>
+        </select>
+        <select id="course-filter" class="w-full md:w-48 p-2 border rounded" aria-label="Select Course">
+          <option value="">All Courses</option>
+        </select>
+      </div>
       <div class="flex w-full md:w-auto">
-        <input id="search-input" type="text" placeholder="Search alumni..." class="w-full md:w-64 p-2 border rounded-l">
-        <button id="search-button" class="bg-blue-500 text-white px-4 py-2 rounded-r">Search</button>
+        <input id="search-input" type="text" placeholder="Search students..." class="w-full md:w-64 p-2 border rounded">
       </div>
     </div>
 
-    <div id="alumni-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-      <!-- Alumni cards will be dynamically inserted here -->
+    <div id="students-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <!-- Student cards will be dynamically inserted here -->
     </div>
   </div>
 
   <script>
-    const alumniGrid = document.getElementById('alumni-grid');
+    const studentsGrid = document.getElementById('students-grid');
     const yearFilter = document.getElementById('year-filter');
-    const degreeFilter = document.getElementById('degree-filter');
+    const courseFilter = document.getElementById('course-filter');
     const searchInput = document.getElementById('search-input');
-    const searchButton = document.getElementById('search-button');
+    let studentData = []; // Store the full student data
 
-    function createDegreeTag(degree, year) {
-      const tag = document.createElement('span');
-      tag.className = 'text-xs bg-blue-500 text-white px-2 py-1 rounded-lg mr-2 mt-1 inline-block';
-      tag.textContent = `${degree} (${year})`;
-      return tag;
+    // Function to format date
+    function formatDate(dateString) {
+      const date = new Date(dateString);
+      return date.toLocaleDateString();
     }
 
-    function createAlumniCard(alumni) {
+    // Function to create student card
+    function createStudentCard(student) {
       const card = document.createElement('div');
-      card.className = 'bg-white rounded-lg shadow-md overflow-hidden cursor-pointer';
-
-      const degrees = alumni.degrees.split(', ');
-      const years = alumni.years.split(', ');
-      const degreeTags = document.createElement('div');
-      degreeTags.className = 'mt-3';
-      degrees.forEach((degree, index) => {
-        degreeTags.appendChild(createDegreeTag(degree, years[index]));
-      });
+      card.className = 'bg-white rounded-lg shadow-md overflow-hidden';
+      card.dataset.year = student.year_of_admission;
+      card.dataset.course = student.course;
 
       // card.innerHTML = `
-      //   <img src="${alumni.profile_picture}" alt="${alumni.full_name}" class="w-full h-48 object-cover">
-      //   <div class="p-4">
-      //       <h3 class="font-bold text-lg">${alumni.full_name}</h3>
-      //       <p class="text-gray-600">${alumni.email}</p>
-      //       <p class="text-gray-600">${alumni.phone}</p>
-      //       <p class="text-sm text-gray-500">${alumni.job_title} at ${alumni.company}</p>
-      //       <p class="text-sm text-gray-500">${alumni.company_location}</p>
-      //       <div class="mt-2 text-sm">
-      //           <a href="${alumni.linkedin}" target="_blank" class="text-blue-500 hover:underline">LinkedIn</a> | 
-      //           <a href="${alumni.twitter}" target="_blank" class="text-blue-500 hover:underline">Twitter</a> | 
-      //           <a href="${alumni.facebook}" target="_blank" class="text-blue-500 hover:underline">Facebook</a>
+      //       <img src="${student.profile_pic || 'default-profile.jpg'}" alt="${student.full_name}" 
+      //           class="w-full h-48 object-cover">
+      //       <div class="p-4">
+      //           <h3 class="font-bold text-lg">${student.full_name}</h3>
+      //           <p class="text-gray-600">${student.email}</p>
+      //           <p class="text-gray-600">${student.phone}</p>
+      //           <p class="text-sm text-gray-500">Course: ${student.course}</p>
+      //           <p class="text-sm text-gray-500">DOB: ${formatDate(student.dob)}</p>
+      //           <div class="mt-2">
+      //               <span class="text-xs bg-blue-500 text-white px-2 py-1 rounded-lg">
+      //                   Year: ${student.year_of_admission}
+      //               </span>
+      //           </div>
+      //           <p class="text-xs text-gray-400 mt-2">Registered: ${formatDate(student.submitted_at)}</p>
       //       </div>
-      //   </div>
-      // `;
+      //   `;
+
 
       card.innerHTML = `
-        <img src="${alumni.profile_picture}" alt="${alumni.full_name}" class="w-full h-48 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg">${alumni.full_name}</h3>
-            <p class="text-gray-600">${alumni.email}</p>
-            <p class="text-sm text-gray-500">${alumni.job_title} at ${alumni.company}</p>
-        </div>
-      `;
-
-      card.querySelector('.p-4').appendChild(degreeTags);
-
-      card.addEventListener('click', () => {
-        window.location.href = `alumni-details.html?alumni_id=${alumni.alumni_id}`;
-      });
+            <img src="${student.profile_pic || 'default-profile.jpg'}" alt="${student.full_name}" 
+                class="w-full h-48 object-cover">
+            <div class="p-4">
+                <h3 class="font-bold text-lg">${student.full_name}</h3>
+                <p class="text-gray-600">${student.email}</p>
+                <p class="text-md text-gray-500">Course: ${student.course}</p>
+                <div class="mt-2">
+                    <span class="text-md bg-blue-500 text-white px-2 py-1 rounded-lg">
+                        Year: ${student.year_of_admission}
+                    </span>
+                </div>
+            </div>
+        `;
 
       return card;
     }
 
-    async function fetchAlumni() {
+    // Function to filter students
+    function filterStudents() {
+      const searchQuery = searchInput.value.toLowerCase();
+      const selectedYear = yearFilter.value;
+      const selectedCourse = courseFilter.value;
+
+      studentsGrid.innerHTML = ''; // Clear existing cards
+
+      studentData.forEach(student => {
+        const matchesSearch =
+          student.full_name.toLowerCase().includes(searchQuery) ||
+          student.email.toLowerCase().includes(searchQuery) ||
+          student.course.toLowerCase().includes(searchQuery);
+
+        const matchesYear = !selectedYear || student.year_of_admission === selectedYear;
+        const matchesCourse = !selectedCourse || student.course === selectedCourse;
+
+        if (matchesSearch && matchesYear && matchesCourse) {
+          studentsGrid.appendChild(createStudentCard(student));
+        }
+      });
+    }
+
+    // Fetch and display student data
+    async function fetchStudents() {
       try {
-        const response = await fetch('fetch_alumni.php');
-        const data = await response.json();
-        alumniGrid.innerHTML = '';
+        const response = await fetch('fetch_students.php'); // You'll need to create this PHP file
+        studentData = await response.json();
 
-        const years = new Set();
-        const degrees = new Set();
-
-        data.forEach(alumni => {
-          alumni.years.split(', ').forEach(year => years.add(year));
-          alumni.degrees.split(', ').forEach(degree => degrees.add(degree));
-        });
-
+        // Populate year filter
+        const years = new Set(studentData.map(student => student.year_of_admission));
         years.forEach(year => {
           const option = document.createElement('option');
           option.value = year;
@@ -213,54 +228,29 @@
           yearFilter.appendChild(option);
         });
 
-        degrees.forEach(degree => {
+        // Populate course filter
+        const courses = new Set(studentData.map(student => student.course));
+        courses.forEach(course => {
           const option = document.createElement('option');
-          option.value = degree;
-          option.textContent = degree;
-          degreeFilter.appendChild(option);
+          option.value = course;
+          option.textContent = course;
+          courseFilter.appendChild(option);
         });
 
-        data.forEach(alumni => {
-          alumniGrid.appendChild(createAlumniCard(alumni));
-        });
+        // Initial display
+        filterStudents();
       } catch (error) {
-        console.error('Error fetching alumni data:', error);
+        console.error('Error fetching student data:', error);
       }
     }
 
-    searchInput.addEventListener('input', () => {
-      filterCards();
-    });
+    // Event listeners for live filtering
+    searchInput.addEventListener('input', filterStudents);
+    yearFilter.addEventListener('change', filterStudents);
+    courseFilter.addEventListener('change', filterStudents);
 
-    searchButton.addEventListener('click', () => {
-      filterCards();
-    });
-
-    yearFilter.addEventListener('change', () => {
-      filterCards();
-    });
-
-    degreeFilter.addEventListener('change', () => {
-      filterCards();
-    });
-
-    function filterCards() {
-      const searchQuery = searchInput.value.toLowerCase();
-      const selectedYear = yearFilter.value;
-      const selectedDegree = degreeFilter.value;
-      const cards = Array.from(alumniGrid.children);
-      cards.forEach(card => {
-        const text = card.textContent.toLowerCase();
-        const yearText = Array.from(card.querySelectorAll('.text-xs')).map(e => e.textContent).join(' ');
-        const degreeText = yearText;
-        const yearMatch = yearText.includes(selectedYear) || selectedYear === '';
-        const degreeMatch = degreeText.includes(selectedDegree) || selectedDegree === '';
-        const searchMatch = text.includes(searchQuery);
-        card.style.display = (yearMatch && degreeMatch && searchMatch) ? '' : 'none';
-      });
-    }
-
-    fetchAlumni();
+    // Initial fetch
+    fetchStudents();
   </script>
 
   <!-- Footer -->
