--- a/client/student-details.html
+++ b/client/student-details.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alumni Directory</title>
+  <title>Alumni Details</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+
   <!-- Nav and footer css and js  -->
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -39,7 +41,7 @@
   </style>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-100 min-h-screen">
   <nav class="sticky top-0 z-50 bg-navy py-3 px-6 shadow-lg">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
       <!-- Logo and Title -->
@@ -113,155 +115,76 @@
     </div>
   </nav>
 
-  <div class="container mx-auto mt-6 mb-6">
-    <div class="flex flex-col md:flex-row justify-between items-center mb-6">
-      <select id="year-filter" class="w-full md:w-48 p-2 border rounded mb-4 md:mb-0" aria-label="Select Year">
-        <option value="">Select Year</option>
-      </select>
-      <select id="degree-filter" class="w-full md:w-48 p-2 border rounded mb-4 md:mb-0" aria-label="Select Degree">
-        <option value="">Select Degree</option>
-      </select>
-      <div class="flex w-full md:w-auto">
-        <input id="search-input" type="text" placeholder="Search alumni..." class="w-full md:w-64 p-2 border rounded-l">
-        <button id="search-button" class="bg-blue-500 text-white px-4 py-2 rounded-r">Search</button>
+  <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
+    <h1 class="text-2xl font-bold text-center py-4 bg-gray-200">Student Details</h1>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/3 p-4 flex flex-col items-center">
+        <img id="profileImage" alt="Student Profile" class="w-48 h-48 rounded-full object-cover bg-indigo-600">
       </div>
-    </div>
-
-    <div id="alumni-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-      <!-- Alumni cards will be dynamically inserted here -->
+      <div class="md:w-2/3 p-4">
+        <div id="detailsContainer" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <!-- Details will be dynamically inserted here -->
+        </div>
+      </div>
     </div>
   </div>
 
   <script>
-    const alumniGrid = document.getElementById('alumni-grid');
-    const yearFilter = document.getElementById('year-filter');
-    const degreeFilter = document.getElementById('degree-filter');
-    const searchInput = document.getElementById('search-input');
-    const searchButton = document.getElementById('search-button');
-
-    function createDegreeTag(degree, year) {
-      const tag = document.createElement('span');
-      tag.className = 'text-xs bg-blue-500 text-white px-2 py-1 rounded-lg mr-2 mt-1 inline-block';
-      tag.textContent = `${degree} (${year})`;
-      return tag;
+    // Function to create a detail element
+    function createDetailElement(key, value) {
+      const detailDiv = document.createElement('div');
+      detailDiv.className = 'bg-amber-50 p-2 rounded';
+      detailDiv.innerHTML = `
+            <span class="font-semibold">${key.replace(/_/g, ' ').toUpperCase()}:</span>
+            <span class="ml-2">${value}</span>
+        `;
+      return detailDiv;
     }
 
-    function createAlumniCard(alumni) {
-      const card = document.createElement('div');
-      card.className = 'bg-white rounded-lg shadow-md overflow-hidden cursor-pointer';
+    // Fetch and display student details
+    async function fetchStudentDetails() {
+      const params = new URLSearchParams(window.location.search);
+      const student_id = params.get('student_id');
 
-      const degrees = alumni.degrees.split(', ');
-      const years = alumni.years.split(', ');
-      const degreeTags = document.createElement('div');
-      degreeTags.className = 'mt-3';
-      degrees.forEach((degree, index) => {
-        degreeTags.appendChild(createDegreeTag(degree, years[index]));
-      });
+      if (!student_id) {
+        alert("No student ID provided in the URL.");
+        return;
+      }
 
-      // card.innerHTML = `
-      //   <img src="${alumni.profile_picture}" alt="${alumni.full_name}" class="w-full h-48 object-cover">
-      //   <div class="p-4">
-      //       <h3 class="font-bold text-lg">${alumni.full_name}</h3>
-      //       <p class="text-gray-600">${alumni.email}</p>
-      //       <p class="text-gray-600">${alumni.phone}</p>
-      //       <p class="text-sm text-gray-500">${alumni.job_title} at ${alumni.company}</p>
-      //       <p class="text-sm text-gray-500">${alumni.company_location}</p>
-      //       <div class="mt-2 text-sm">
-      //           <a href="${alumni.linkedin}" target="_blank" class="text-blue-500 hover:underline">LinkedIn</a> | 
-      //           <a href="${alumni.twitter}" target="_blank" class="text-blue-500 hover:underline">Twitter</a> | 
-      //           <a href="${alumni.facebook}" target="_blank" class="text-blue-500 hover:underline">Facebook</a>
-      //       </div>
-      //   </div>
-      // `;
-
-      card.innerHTML = `
-        <img src="${alumni.profile_picture}" alt="${alumni.full_name}" class="w-full h-48 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg">${alumni.full_name}</h3>
-            <p class="text-gray-600">${alumni.email}</p>
-            <p class="text-sm text-gray-500">${alumni.job_title} at ${alumni.company}</p>
-        </div>
-      `;
-
-      card.querySelector('.p-4').appendChild(degreeTags);
-
-      card.addEventListener('click', () => {
-        window.location.href = `alumni-details.html?alumni_id=${alumni.alumni_id}`;
-      });
-
-      return card;
-    }
-
-    async function fetchAlumni() {
       try {
-        const response = await fetch('fetch_alumni.php');
+        const response = await fetch(`fetch_student_details.php?student_id=${student_id}`);
         const data = await response.json();
-        alumniGrid.innerHTML = '';
 
-        const years = new Set();
-        const degrees = new Set();
+        if (data.error) {
+          alert(data.error);
+          return;
+        }
 
-        data.forEach(alumni => {
-          alumni.years.split(', ').forEach(year => years.add(year));
-          alumni.degrees.split(', ').forEach(degree => degrees.add(degree));
-        });
+        // Set profile image
+        document.getElementById('profileImage').src = data.profile_pic || 'https://via.placeholder.com/150';
 
-        years.forEach(year => {
-          const option = document.createElement('option');
-          option.value = year;
-          option.textContent = year;
-          yearFilter.appendChild(option);
-        });
+        // Fields to exclude from the details
+        const excludeFields = ['id', 'phone', 'submitted_at', 'profile_pic'];
 
-        degrees.forEach(degree => {
-          const option = document.createElement('option');
-          option.value = degree;
-          option.textContent = degree;
-          degreeFilter.appendChild(option);
-        });
-
-        data.forEach(alumni => {
-          alumniGrid.appendChild(createAlumniCard(alumni));
+        // Populate other details dynamically
+        const detailsContainer = document.getElementById('detailsContainer');
+        detailsContainer.innerHTML = ''; // Clear existing details
+        Object.entries(data).forEach(([key, value]) => {
+          if (!excludeFields.includes(key)) { // Skip excluded fields
+            detailsContainer.appendChild(createDetailElement(key, value));
+          }
         });
       } catch (error) {
-        console.error('Error fetching alumni data:', error);
+        console.error('Error fetching student details:', error);
       }
     }
 
-    searchInput.addEventListener('input', () => {
-      filterCards();
-    });
-
-    searchButton.addEventListener('click', () => {
-      filterCards();
-    });
-
-    yearFilter.addEventListener('change', () => {
-      filterCards();
-    });
-
-    degreeFilter.addEventListener('change', () => {
-      filterCards();
-    });
-
-    function filterCards() {
-      const searchQuery = searchInput.value.toLowerCase();
-      const selectedYear = yearFilter.value;
-      const selectedDegree = degreeFilter.value;
-      const cards = Array.from(alumniGrid.children);
-      cards.forEach(card => {
-        const text = card.textContent.toLowerCase();
-        const yearText = Array.from(card.querySelectorAll('.text-xs')).map(e => e.textContent).join(' ');
-        const degreeText = yearText;
-        const yearMatch = yearText.includes(selectedYear) || selectedYear === '';
-        const degreeMatch = degreeText.includes(selectedDegree) || selectedDegree === '';
-        const searchMatch = text.includes(searchQuery);
-        card.style.display = (yearMatch && degreeMatch && searchMatch) ? '' : 'none';
-      });
-    }
-
-    fetchAlumni();
+    // Fetch student details on page load
+    fetchStudentDetails();
   </script>
+
+
+
 
   <!-- Footer -->
   <div class="font-montserrat bg-antiquewhite">
