--- a/client/student.html
+++ b/client/student.html
@@ -112,94 +112,153 @@
       </div>
     </div>
   </nav>
+
   <div class="container mx-auto mt-6 mb-6">
     <div class="flex flex-col md:flex-row justify-between items-center mb-6">
-        <select id="year-filter" class="w-full md:w-48 p-2 border rounded mb-4 md:mb-0" aria-label="Select Year">
-            <option value="">Select Year</option>
+      <div class="flex flex-col md:flex-row gap-4 w-full md:w-auto mb-4 md:mb-0">
+        <select id="year-filter" class="w-full md:w-48 p-2 border rounded" aria-label="Select Year">
+          <option value="">All Years</option>
         </select>
-        <div class="flex w-full md:w-auto">
-            <input id="search-input" type="text" placeholder="Search alumni..." class="w-full md:w-64 p-2 border rounded-l">
-            <button id="search-button" class="bg-blue-500 text-white px-4 py-2 rounded-r">Search</button>
-        </div>
+        <select id="course-filter" class="w-full md:w-48 p-2 border rounded" aria-label="Select Course">
+          <option value="">All Courses</option>
+        </select>
+      </div>
+      <div class="flex w-full md:w-auto">
+        <input id="search-input" type="text" placeholder="Search students..." class="w-full md:w-64 p-2 border rounded">
+      </div>
     </div>
 
-    <div id="alumni-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <!-- Alumni cards will be dynamically inserted here -->
+    <div id="students-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <!-- Student cards will be dynamically inserted here -->
     </div>
-</div>
+  </div>
 
-<script>
-    const alumniGrid = document.getElementById('alumni-grid');
+  <script>
+    const studentsGrid = document.getElementById('students-grid');
     const yearFilter = document.getElementById('year-filter');
+    const courseFilter = document.getElementById('course-filter');
     const searchInput = document.getElementById('search-input');
-    const searchButton = document.getElementById('search-button');
+    let studentData = []; // Store the full student data
 
-    // Function to create alumni card
-    function createAlumniCard(alumni) {
-        const card = document.createElement('div');
-        card.className = 'bg-white rounded-lg shadow-md overflow-hidden cursor-pointer';
-        card.innerHTML = `
-            <img src="${alumni.profile_picture}" alt="${alumni.full_name}" class="w-full h-48 object-cover">
+    // Function to format date
+    function formatDate(dateString) {
+      const date = new Date(dateString);
+      return date.toLocaleDateString();
+    }
+
+    // Function to create student card
+    function createStudentCard(student) {
+      const card = document.createElement('div');
+      card.className = 'bg-white rounded-lg shadow-md overflow-hidden';
+      card.dataset.year = student.year_of_admission;
+      card.dataset.course = student.course;
+
+      // card.innerHTML = `
+      //       <img src="${student.profile_pic || 'default-profile.jpg'}" alt="${student.full_name}" 
+      //           class="w-full h-48 object-cover">
+      //       <div class="p-4">
+      //           <h3 class="font-bold text-lg">${student.full_name}</h3>
+      //           <p class="text-gray-600">${student.email}</p>
+      //           <p class="text-gray-600">${student.phone}</p>
+      //           <p class="text-sm text-gray-500">Course: ${student.course}</p>
+      //           <p class="text-sm text-gray-500">DOB: ${formatDate(student.dob)}</p>
+      //           <div class="mt-2">
+      //               <span class="text-xs bg-blue-500 text-white px-2 py-1 rounded-lg">
+      //                   Year: ${student.year_of_admission}
+      //               </span>
+      //           </div>
+      //           <p class="text-xs text-gray-400 mt-2">Registered: ${formatDate(student.submitted_at)}</p>
+      //       </div>
+      //   `;
+
+
+      card.innerHTML = `
+            <img src="${student.profile_pic || 'default-profile.jpg'}" alt="${student.full_name}" 
+                class="w-full h-48 object-cover">
             <div class="p-4">
-                <h3 class="font-bold text-lg">${alumni.full_name}</h3>
-                <p class="text-gray-600">${alumni.degree} (${alumni.year})</p>
-                <p class="text-sm text-gray-500">${alumni.job_title} at ${alumni.company}</p>
+                <h3 class="font-bold text-lg">${student.full_name}</h3>
+                <p class="text-gray-600">${student.email}</p>
+                <p class="text-md text-gray-500">Course: ${student.course}</p>
+                <div class="mt-2">
+                    <span class="text-md bg-blue-500 text-white px-2 py-1 rounded-lg">
+                        Year: ${student.year_of_admission}
+                    </span>
+                </div>
             </div>
         `;
-        card.addEventListener('click', () => {
-            window.location.href = `alumni-details.html?alumni_id=${alumni.alumni_id}`;
-        });
-        return card;
+      // Add click event listener
+      card.addEventListener('click', () => {
+        // Redirect to details page with student_id in the query string
+        window.location.href = `student-details.html?student_id=${student.id}`;
+      });
+      return card;
+
     }
 
-    // Fetch and display alumni data
-    async function fetchAlumni() {
-        try {
-            const response = await fetch('fetch_alumni.php');
-            const data = await response.json();
-            alumniGrid.innerHTML = ''; // Clear existing data
+    // Function to filter students
+    function filterStudents() {
+      const searchQuery = searchInput.value.toLowerCase();
+      const selectedYear = yearFilter.value;
+      const selectedCourse = courseFilter.value;
 
-            // Populate year filter
-            const years = new Set(data.map(alumni => alumni.year));
-            years.forEach(year => {
-                const option = document.createElement('option');
-                option.value = year;
-                option.textContent = year;
-                yearFilter.appendChild(option);
-            });
+      studentsGrid.innerHTML = ''; // Clear existing cards
 
-            // Display alumni cards
-            data.forEach(alumni => {
-                alumniGrid.appendChild(createAlumniCard(alumni));
-            });
-        } catch (error) {
-            console.error('Error fetching alumni data:', error);
+      studentData.forEach(student => {
+        const matchesSearch =
+          student.full_name.toLowerCase().includes(searchQuery) ||
+          student.email.toLowerCase().includes(searchQuery) ||
+          student.course.toLowerCase().includes(searchQuery);
+
+        const matchesYear = !selectedYear || student.year_of_admission === selectedYear;
+        const matchesCourse = !selectedCourse || student.course === selectedCourse;
+
+        if (matchesSearch && matchesYear && matchesCourse) {
+          studentsGrid.appendChild(createStudentCard(student));
         }
+      });
     }
 
-    // Search functionality
-    searchButton.addEventListener('click', () => {
-        const searchQuery = searchInput.value.toLowerCase();
-        const cards = Array.from(alumniGrid.children);
-        cards.forEach(card => {
-            const text = card.textContent.toLowerCase();
-            card.style.display = text.includes(searchQuery) ? '' : 'none';
-        });
-    });
+    // Fetch and display student data
+    async function fetchStudents() {
+      try {
+        const response = await fetch('fetch_students.php'); // You'll need to create this PHP file
+        studentData = await response.json();
 
-    // Filter by year
-    yearFilter.addEventListener('change', () => {
-        const selectedYear = yearFilter.value;
-        const cards = Array.from(alumniGrid.children);
-        cards.forEach(card => {
-            const yearText = card.querySelector('p').textContent;
-            card.style.display = yearText.includes(selectedYear) || !selectedYear ? '' : 'none';
+        // Populate year filter
+        const years = new Set(studentData.map(student => student.year_of_admission));
+        years.forEach(year => {
+          const option = document.createElement('option');
+          option.value = year;
+          option.textContent = year;
+          yearFilter.appendChild(option);
         });
-    });
+
+        // Populate course filter
+        const courses = new Set(studentData.map(student => student.course));
+        courses.forEach(course => {
+          const option = document.createElement('option');
+          option.value = course;
+          option.textContent = course;
+          courseFilter.appendChild(option);
+        });
+
+        // Initial display
+        filterStudents();
+      } catch (error) {
+        console.error('Error fetching student data:', error);
+      }
+    }
+
+    // Event listeners for live filtering
+    searchInput.addEventListener('input', filterStudents);
+    yearFilter.addEventListener('change', filterStudents);
+    courseFilter.addEventListener('change', filterStudents);
+
+
 
     // Initial fetch
-    fetchAlumni();
-</script>
+    fetchStudents();
+  </script>
 
   <!-- Footer -->
   <div class="font-montserrat bg-antiquewhite">
