--- a/client/posts old copy.html
+++ b/client/posts old copy.html
@@ -133,20 +133,19 @@
   </nav>
 
   <!-- Main Code -->
-  <!-- Updated Main Code -->
   <div id="posts-container" class="m-5 rounded-2xl bg-gray-50 shadow-lg p-5 relative min-h-screen">
     <div id="posts-header" class="flex justify-between mb-5 gap-2">
       <button id="alumni-tab"
-        class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white active:scale-95">
+        class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white ctive:scale-95">
         Alumni Posts
       </button>
       <button id="student-tab"
-        class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white active:scale-95">
+        class="flex-1 text-center py-3 cursor-pointer font-medium text-gray-700 transition-all duration-300 ease-in-out rounded-lg bg-aliceblue hover:bg-slate-500 hover:text-antique-white  active:scale-95">
         Student Queries
       </button>
     </div>
     <div id="posts-content" class="p-5">
-      <!-- Content dynamically inserted -->
+      <!-- Content will be dynamically inserted here -->
     </div>
     <button id="create-button"
       class="fixed bottom-8 right-8 bg-blue-500 text-white border-none rounded-full px-6 py-3 text-lg cursor-pointer flex items-center justify-center shadow-lg transition-all duration-300 hover:bg-blue-600 active:scale-95">
@@ -160,9 +159,9 @@
     <div class="bg-white p-8 rounded-2xl w-4/5 max-w-2xl shadow-2xl">
       <h2 id="form-title" class="text-2xl font-bold mb-4">Create a New Post</h2>
       <form id="create-form">
-        <input type="text" id="post-title" name="title" placeholder="Title"
+        <input type="text" id="post-title" placeholder="Title"
           class="w-full p-2 mb-4 rounded border border-gray-300 text-lg" required>
-        <textarea id="post-content" name="content" placeholder="Content"
+        <textarea id="post-content" placeholder="Content"
           class="w-full p-2 mb-4 rounded border border-gray-300 text-lg min-h-[150px] resize-vertical"
           required></textarea>
         <div class="flex justify-end gap-2">
@@ -176,6 +175,7 @@
   </div>
 
   <script>
+    const postsContainer = document.getElementById('posts-container');
     const postsContent = document.getElementById('posts-content');
     const alumniTab = document.getElementById('alumni-tab');
     const studentTab = document.getElementById('student-tab');
@@ -183,94 +183,60 @@
     const createFormOverlay = document.getElementById('create-form-overlay');
     const createForm = document.getElementById('create-form');
     const cancelButton = document.getElementById('cancel-button');
+    const formTitle = document.getElementById('form-title');
     const postTitleInput = document.getElementById('post-title');
     const postContentInput = document.getElementById('post-content');
-    const formTitle = document.getElementById('form-title');
 
     let activeTab = 'alumni';
+    let posts = [
+      { id: 1, author: 'John Doe', timestamp: '2 hours ago', title: 'My Alumni Experience', content: 'It was great!', likes: 5, comments: 3 },
+      { id: 2, author: 'Jane Smith', timestamp: '1 day ago', title: 'Career Advice', content: 'Here are some tips...', likes: 10, comments: 7 },
+    ];
+    let queries = [
+      { id: 1, author: 'Alice Brown', timestamp: '3 hours ago', title: 'Question about Admissions', content: 'How do I apply?', status: 'Open' },
+      { id: 2, author: 'Bob Green', timestamp: '2 days ago', title: 'Scholarship Information', content: 'Are there any available?', status: 'Closed' },
+    ];
 
-    function fetchPosts() {
-      fetch('posts_and_queries_manager.php?action=fetch&tab=' + activeTab)
-        .then(response => response.json())
-        .then(data => {
-          // Sort posts or queries by timestamp (latest to oldest)
-          data.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
-          renderPosts(data);
-        });
-    }
-
-
-    function renderPosts(items) {
-      if (items.length === 0) {
-        postsContent.innerHTML = `
-            <div class="text-center text-gray-500 p-5">
-                <p>No ${activeTab === 'alumni' ? 'posts' : 'queries'} available</p>
-            </div>
-        `;
-        return;
-      }
-
+    function renderPosts() {
+      const items = activeTab === 'alumni' ? posts : queries;
       postsContent.innerHTML = items.map(item => `
-        <div class="bg-white rounded-lg shadow-md p-5 mb-5">
-            <div class="flex items-center text-sm text-gray-600">
-                <strong>${item.author}</strong>
-                <span class="ml-2 text-gray-400">${new Date(item.timestamp).toLocaleString()}</span>
-            </div>
-            <h4 class="text-xl font-semibold my-2 text-gray-800">${item.title}</h4>
-            <p class="text-gray-700">${item.content}</p>
-            <div class="flex gap-2 mt-3">
-                <button class="edit-button bg-yellow-500 text-white px-4 py-2 rounded text-sm" data-id="${item.id}">Edit</button>
-                <button class="delete-button bg-red-500 text-white px-4 py-2 rounded text-sm" data-id="${item.id}">Delete</button>
-            </div>
-        </div>
-    `).join('');
-
-      addListeners();
-    }
-
-
-    function addListeners() {
-      document.querySelectorAll('.delete-button').forEach(button => {
-        button.addEventListener('click', () => handleDelete(button.dataset.id));
-      });
-
-      document.querySelectorAll('.edit-button').forEach(button => {
-        button.addEventListener('click', () => showCreateForm(true, button.dataset.id));
-      });
+                <div class="bg-white rounded-lg shadow-md p-5 mb-5 transition-transform duration-200 hover:scale-[1.02] fade-in">
+                    <div class="flex items-center text-sm text-gray-600">
+                        <strong>${item.author}</strong>
+                        <span class="ml-2 text-gray-400">${item.timestamp}</span>
+                    </div>
+                    <h4 class="text-xl font-semibold my-2 text-gray-800">${item.title}</h4>
+                    <p class="text-gray-700">${item.content}</p>
+                    <div class="text-xs text-gray-500 mt-3 border-l-4 border-blue-500 pl-2">
+                        ${activeTab === 'alumni'
+          ? `${item.likes} likes · ${item.comments} comments`
+          : `Status: ${item.status}`
+        }
+                    </div>
+                </div>
+            `).join('');
     }
 
     function setActiveTab(tab) {
       activeTab = tab;
-      fetchPosts();
-
-      // Update active tab styles
-      if (tab === 'alumni') {
-        alumniTab.classList.add('bg-slate-300', 'text-grey', 'font-bold');
-        studentTab.classList.remove('bg-slate-300', 'text-grey', 'font-bold');
-        createButton.querySelector('span').textContent = 'Create your post';
-      } else {
-        studentTab.classList.add('bg-slate-300', 'text-grey', 'font-bold');
-        alumniTab.classList.remove('bg-slate-300', 'text-grey', 'font-bold');
-        createButton.querySelector('span').textContent = 'Create your query';
-      }
+      alumniTab.classList.toggle('bg-blue-500', tab === 'alumni');
+      alumniTab.classList.toggle('text-white', tab === 'alumni');
+      studentTab.classList.toggle('bg-blue-500', tab === 'student');
+      studentTab.classList.toggle('text-white', tab === 'student');
+      renderPosts();
+      updateCreateButton();
     }
 
+    function updateCreateButton() {
+      const icon = activeTab === 'alumni' ? 'fa-pen' : 'fa-question-circle';
+      const text = activeTab === 'alumni' ? 'Create your post' : 'Create your query';
+      createButton.innerHTML = `<i class="fas ${icon} mr-2"></i>${text}`;
+    }
 
-    function showCreateForm(isEdit = false, id = null) {
+    function showCreateForm() {
       createFormOverlay.classList.remove('hidden');
-      if (isEdit) {
-        fetch(`posts_and_queries_manager.php?action=get&id=${id}&tab=${activeTab}`)
-          .then(response => response.json())
-          .then(data => {
-            postTitleInput.value = data.title;
-            postContentInput.value = data.content;
-            formTitle.textContent = 'Edit Post';
-            createForm.onsubmit = e => handleEdit(e, id);
-          });
-      } else {
-        formTitle.textContent = 'Create New Post';
-        createForm.onsubmit = handleSubmit;
-      }
+      formTitle.textContent = activeTab === 'alumni' ? 'Create a New Post' : 'Ask a New Query';
+      createForm.querySelector('button[type="submit"]').textContent = activeTab === 'alumni' ? 'Post' : 'Submit Query';
     }
 
     function hideCreateForm() {
@@ -281,50 +247,37 @@
 
     function handleSubmit(e) {
       e.preventDefault();
-      const formData = new FormData(createForm);
-      formData.append('action', 'create');
-      formData.append('tab', activeTab);
+      const timestamp = new Date().toLocaleString();
+      const newItem = {
+        id: activeTab === 'alumni' ? posts.length + 1 : queries.length + 1,
+        author: 'Current User',
+        timestamp,
+        title: postTitleInput.value,
+        content: postContentInput.value,
+      };
 
-      fetch('posts_and_queries_manager.php', {
-        method: 'POST',
-        body: formData,
-      }).then(() => {
-        hideCreateForm();
-        fetchPosts();
-      });
-    }
+      if (activeTab === 'alumni') {
+        newItem.likes = 0;
+        newItem.comments = 0;
+        posts.unshift(newItem);
+      } else {
+        newItem.status = 'Open';
+        queries.unshift(newItem);
+      }
 
-    function handleEdit(e, id) {
-      e.preventDefault();
-      const formData = new FormData(createForm);
-      formData.append('action', 'update');
-      formData.append('id', id);
-      formData.append('tab', activeTab);
-
-      fetch('posts_and_queries_manager.php', {
-        method: 'POST',
-        body: formData,
-      }).then(() => {
-        hideCreateForm();
-        fetchPosts();
-      });
-    }
-
-    function handleDelete(id) {
-      fetch(`posts_and_queries_manager.php?action=delete&id=${id}&tab=${activeTab}`)
-        .then(() => fetchPosts());
+      hideCreateForm();
+      renderPosts();
     }
 
     alumniTab.addEventListener('click', () => setActiveTab('alumni'));
     studentTab.addEventListener('click', () => setActiveTab('student'));
-    createButton.addEventListener('click', () => showCreateForm());
+    createButton.addEventListener('click', showCreateForm);
     cancelButton.addEventListener('click', hideCreateForm);
+    createForm.addEventListener('submit', handleSubmit);
 
     // Initial render
     setActiveTab('alumni');
   </script>
-
-
 
   <!-- Footer -->
   <div class="font-montserrat bg-antiquewhite">
